<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/ProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_name_hint" />

    <EditText
        android:id="@+id/ProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_price_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/ProductQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_quantity_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/ProductImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_image_hint" />

    <Spinner
        android:id="@+id/SpinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
