<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/TextProductId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_id_hint" />

    <EditText
        android:id="@+id/TextProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_price_hint" />

    <EditText
        android:id="@+id/editProductQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_quantity_hint" />

</LinearLayout>
