<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ListView
        android:id="@+id/listViewVentas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewTotalVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/sales_total" />

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonInventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_inventory" />

        <Button
            android:id="@+id/buttonSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_exit" />
    </LinearLayout>
</RelativeLayout>
