<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:prompt="@string/seleccionar_categoria"
        app:layout_constraintEnd_toStartOf="@+id/buttonFinalizarVenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonFinalizarVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/finalizar_venta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategorias"
        app:layout_constraintTop_toTopOf="parent"/>

    <ListView
        android:id="@+id/listViewProductos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/menuButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorias"/>

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonInventario"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/inventario"/>

        <Button
            android:id="@+id/buttonSalir"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pagar"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
